--- a/.github/workflows/enigma2.yml
+++ b/.github/workflows/enigma2.yml
@@ -2,23 +2,23 @@ name: enigma2 build
 
 on:
   push:
-    branches: [ 7.3-dev-sigc3 ]
+    branches: [ 7.5-dev ]
   pull_request:
-    branches: [ 7.3-dev ]
+    branches: [ 7.5-dev ]
 
 jobs:
   build:
     name: Build enigma2
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
-        gcc: [11]
-        python: ['3.10', '3.11']
+        gcc: [13]
+        python: ['3.12']
     steps:
       - name: Install prerequisites
         run: |
-          sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
           sudo apt-get -q update
+          sudo add-apt-repository -y ppa:deadsnakes/ppa
           sudo apt remove -y libunwind-14-dev
           sudo apt-get install g++-${{ matrix.gcc }}
           sudo apt-get install linux-libc-dev
@@ -38,13 +38,17 @@ jobs:
           sudo apt-get install libavahi-client-dev
           sudo apt-get install libjpeg-turbo8-dev
           sudo apt-get install libgif-dev
-      - uses: actions/checkout@v3
+          sudo apt-get install libcurl4-openssl-dev
 
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
 
       - name: Build enigma2 dependencies, gcc-${{ matrix.gcc }}
+        id: depends
+        continue-on-error: true
         env:
           CC: "gcc-${{ matrix.gcc }}"
           CXX: "g++-${{ matrix.gcc }}"
