--- a/.github/workflows/enigma2.yml
+++ b/.github/workflows/enigma2.yml
@@ -80,9 +80,10 @@ jobs:
           popd
           echo installing libsigc++3
           cd /tmp
-          git clone --depth 1 https://github.com/libsigcplusplus/libsigcplusplus.git
-          cd libsigcplusplus
-          ./autogen.sh
+          git clone --depth 1 https://github.com/dbus-cxx/libsigc--3.0.git
+          cd libsigc--3.0
+          autoreconf -i
+          ./configure
           make
           sudo make install
           popd
