Revert "update github workflow"
This reverts commit fc9ee0916a24d92a910740457ffeb028b4da4bf3.

--- a/.github/workflows/enigma2.yml
+++ b/.github/workflows/enigma2.yml
@@ -80,10 +80,9 @@ jobs:
           popd
           echo installing libsigc++3
           cd /tmp
-          git clone --depth 1 https://github.com/dbus-cxx/libsigc--3.0.git
-          cd libsigc--3.0
-          autoreconf -i
-          ./configure
+          git clone --depth 1 https://github.com/libsigcplusplus/libsigcplusplus.git
+          cd libsigcplusplus
+          ./autogen.sh
           make
           sudo make install
           popd
